2016-05-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: displayunit default ot 'K' (uppercase)
	* installcheck/Amanda_Rest_Configs.pl: Fix for K uppercase
	* installcheck/Amanda_Rest_Runs.pl: Fix for K uppercase
	* xfer-src/xfer-test.c: Call config_init(0, NULL)
	* installcheck/catalogs/*.cat: Fix for K uppercase

2016-05-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm (make_new_tape_label): Can take meta
	  from $self
	* perl/Amanda/Changer/diskflat.pm: Use meta from state
	* installcheck/Amanda_Changer_diskflat.pl: More meta check

2016-05-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Check meta-autolabel, autolabel, labelstr and
	  tapepool do not conatisna space

2016-05-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amadmin.c (import_db): Fix version parsing
	* server-src/amadmin.c: Fix for level > 9

2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c: #include "conffile.h"

2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c (do_directtcp_accept): Use dtimeout for the
	  timeout

2016-05-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Fix fro taper failure after SHM-NAME received

2016-05-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/stream.h (STREAM_BUFSIZE): Set to NETWORK_BLOCK_BYTES * 4

2016-05-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c (tcpm_recv_token): Fix return value

2016-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/shm-ring.c (shm_ring_sem_wait): Return -1 if the shm-ring
	  is cancelled
	* device-src/xfer-dest-taper-splitter.c: s/!!/!/

2016-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c: Improve error message
	* common-src/shm-ring.c (shm_ring_sem_wait): Faile only if the process
	  do not exists (ESRCH)